# tropygal

./: LICENSE  OLD_setup.py  README.md  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  installation.rst~  intro.rst  intro.rst~  reference.rst  reference.rst~  tutorial_Hernquist.ipynb  tutorial_isochrone.ipynb  tutorial_minimum-entropy_pot_fit.ipynb  tutorials.rst  tutorials.rst~
docs/source/_build/doctrees/: environment.pickle  index.doctree  installation.doctree  intro.doctree  reference.doctree  tutorial_Hernquist.doctree  tutorial_isochrone.doctree  tutorials.doctree
docs/source/_build/html/: .buildinfo  genindex.html  index.html  installation.html  intro.html  objects.inv  reference.html  search.html  searchindex.js  tutorial_Hernquist.html  tutorial_isochrone.html  tutorial_isochrone.ipynb  tutorials.html
docs/source/_build/html/_modules/: index.html
docs/source/_build/html/_modules/tropygal/: DFs.html  base_funcs.html  potentials.html
docs/source/_build/html/_sources/: index.rst.txt  intro.rst.txt
entropygal/: _base_funcs.py
galdynentropy/: __init__.py~  _base_funcs.py
galentropy/: __init__.py  entropies.py
tropygal/: DFs.py  __init__.py  _base_funcs.py  base_funcs.py  entropies.py  potentials.py  potentials.py~  shukra_base_funcs.py
