[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tropygal"
version = "0.1.2"
description = "Entropy estimators for galactic dynamics"
readme = "README.md"
authors = [
    { name = "Leandro Beraldo e Silva", email = "lberaldoesilva@on.br" }
]
license = { text = "MIT" }
requires-python = ">=3"
dependencies = [
    "numpy",
    "scipy"
]

[tool.setuptools.packages.find]
include = ["tropygal", "tropygal.*"]

[tool.setuptools.package-data]
# Matches package_data={"": ["README.md","LICENSE"]}
"*" = ["README.md", "LICENSE"]
